<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background_color">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:background="@drawable/background"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/bannerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register Now"
            android:textColor="@color/green_light"
            android:textSize="40dp"
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/placeholder_login"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:maxLength="24"
            android:id="@+id/signupUsername"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_600"
            android:paddingBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/placeholder_fullname"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:maxLength="64"
            android:id="@+id/signupFullname"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_600"
            android:paddingBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/placeholder_password"
            android:id="@+id/signupPassword"
            android:layout_marginTop="10dp"
            android:maxLength="20"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_600"
            android:paddingBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email"
            android:ems="10"
            android:maxLength="40"
            android:layout_marginTop="10dp"
            android:id="@+id/signupEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_600"
            android:paddingBottom="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_signup"
            android:id="@+id/signupJoinBtn"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:stateListAnimator="@null"
            android:background="@drawable/button_login"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/google"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/facebook"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10px"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/action_exist_account"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:text="@string/action_login"
                android:textColor="@color/green_light"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/gotoWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/action_login"
            android:textColor="@color/green_light"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
